# mlibc

./: .gitignore  CMakeLists.txt  README.md
dsa_1/: dsa_1.c  dsa_1.h  dsa_1_hashmap.c  dsa_1_hashmap.h  dsa_1_sorts.c  dsa_1_sorts.h  dsa_1_stack.c  dsa_1_stack.h
m_cat/: e.txt  m_cat.c  m_cat.h
m_grep/: m_grep.c  m_grep.h  test-file1.txt  test-file2.txt
